--- a/app/src/main/res/anim/fade_out.xml
+++ b/app/src/main/res/anim/fade_out.xml
@@ -1,6 +1,11 @@
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true" >
+
     <alpha
-        android:duration="@android:integer/config_shortAnimTime"
+        android:duration="1000"
         android:fromAlpha="1.0"
-        android:toAlpha="0.0"/>
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:toAlpha="0.0" />
+
 </set>
