--- a/app/src/main/res/layout/dialog_city_selector.xml
+++ b/app/src/main/res/layout/dialog_city_selector.xml
@@ -52,4 +52,27 @@
         tools:listitem="@layout/item_city_selector"
         tools:itemCount="20"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/nothing_found_image"
+        android:layout_width="@dimen/_90sdp"
+        android:layout_height="@dimen/_93sdp"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:src="@drawable/no_tickets"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/find_city_layout" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/nothing_found_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_7sdp"
+        android:textSize="@dimen/_11sdp"
+        android:text="@string/nothing_found"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/nothing_found_image"
+        app:layout_constraintStart_toStartOf="@id/nothing_found_image"
+        app:layout_constraintEnd_toEndOf="@id/nothing_found_image"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
