--- a/app/src/main/res/layout/fragment_bus_plan.xml
+++ b/app/src/main/res/layout/fragment_bus_plan.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -74,10 +75,10 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <View
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/bus_plan_layout"
-        android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_300sdp"
+        android:layout_width="@dimen/_190sdp"
+        android:layout_height="@dimen/_321sdp"
         android:background="@drawable/ic_main_frame"
         android:layout_marginTop="@dimen/_14sdp"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,20 +92,22 @@
         android:src="@drawable/wheel"
         app:layout_constraintStart_toStartOf="@id/bus_plan_layout"
         app:layout_constraintTop_toTopOf="@id/bus_plan_layout"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginStart="@dimen/_20sdp"/>
+        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginStart="@dimen/_25sdp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_bus_plan"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/wheel_img"
-        app:layout_constraintStart_toStartOf="@id/bus_plan_layout"
-        app:layout_constraintEnd_toEndOf="@id/bus_plan_layout"
-        app:layout_constraintBottom_toBottomOf="@id/bus_plan_layout"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_20sdp"/>
+        android:layout_marginBottom="@dimen/_22sdp"
+        app:layout_constraintBottom_toBottomOf="@id/bus_plan_layout"
+        app:layout_constraintEnd_toEndOf="@id/bus_plan_layout"
+        app:layout_constraintStart_toStartOf="@+id/wheel_img"
+        app:layout_constraintTop_toBottomOf="@id/wheel_img"
+        tools:listitem="@layout/item_seat" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
