--- a/app/src/main/res/layout/fragment_change_language.xml
+++ b/app/src/main/res/layout/fragment_change_language.xml
@@ -55,6 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
+            android:checked="true"
             app:layout_constraintTop_toTopOf="@+id/appCompatTextView8"
             app:layout_constraintBottom_toBottomOf="@id/appCompatTextView8"
             android:buttonTint="@color/blue_text"/>
