--- a/app/src/main/res/layout/fragment_search_trip.xml
+++ b/app/src/main/res/layout/fragment_search_trip.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="15dp"
     tools:context=".ui.search_trip.SearchTripFragment">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -12,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_17sdp"
-            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginStart="@dimen/_12sdp"
             android:layout_marginEnd="@dimen/_8sdp"
             android:textAlignment="textStart"
             android:textSize="@dimen/_16sdp"
@@ -25,13 +24,14 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/search_banner"
-            android:layout_width="@dimen/_290sdp"
+            android:layout_width="0dp"
             android:layout_height="@dimen/_130sdp"
             android:src="@drawable/banner2"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
+            android:layout_marginEnd="@dimen/_12sdp"
             app:layout_constraintTop_toBottomOf="@id/search_title"
             android:layout_marginTop="@dimen/_25sdp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/search_title"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -47,12 +47,14 @@
 
     <FrameLayout
         android:id="@+id/from_city_layout"
-        android:layout_width="@dimen/_290sdp"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/_54sdp"
-        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:background="@drawable/ic_from_city_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        app:layout_constraintEnd_toEndOf="@id/search_banner"
+        app:layout_constraintStart_toStartOf="@id/search_banner"
         app:layout_constraintTop_toBottomOf="@id/search_banner">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -88,6 +90,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_54sdp"
             android:layout_marginTop="@dimen/_minus2sdp"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginEnd="@dimen/_12sdp"
+            app:layout_constraintStart_toStartOf="@id/from_city_layout"
+            app:layout_constraintEnd_toEndOf="@id/from_city_layout"
             android:background="@drawable/ic_to_city_layout"
             app:layout_constraintTop_toBottomOf="@id/from_city_layout">
 
@@ -132,11 +138,11 @@
         <FrameLayout
             android:id="@+id/date_layout"
             android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="2.5dp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_25sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            app:layout_constraintStart_toStartOf="@id/search_banner"
             android:background="@drawable/ic_et_layout"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/center_barrier"
             app:layout_constraintTop_toBottomOf="@id/to_city_layout">
 
@@ -189,12 +195,12 @@
         <FrameLayout
             android:id="@+id/passenger_number_layout"
             android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_25sdp"
             android:background="@drawable/ic_et_layout"
-            android:layout_marginStart="2.5dp"
+            android:layout_marginStart="@dimen/_5sdp"
             app:layout_constraintStart_toStartOf="@id/center_barrier"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/search_banner"
             app:layout_constraintTop_toBottomOf="@id/to_city_layout">
 
             <com.google.android.material.textfield.TextInputLayout
@@ -237,7 +243,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/search_trip_button"
-        android:layout_width="@dimen/_290sdp"
+        android:layout_width="@dimen/_275sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginBottom="@dimen/_25sdp"
         android:background="@drawable/ic_button_layout"
@@ -246,7 +252,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/search_banner"
+        app:layout_constraintStart_toStartOf="@id/search_banner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
