--- a/app/src/main/res/layout/fragment_bus_plan.xml
+++ b/app/src/main/res/layout/fragment_bus_plan.xml
@@ -1,146 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/back_button"
-        android:layout_width="@dimen/_29sdp"
-        android:layout_height="@dimen/_29sdp"
-        android:src="@drawable/ic_button_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/_16sdp"
-        android:layout_marginStart="@dimen/_19sdp"/>
-
-    <TextView
-        android:id="@+id/title_choose_seats"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_choose_seats"
-        app:layout_constraintStart_toEndOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="@id/back_button"
-        app:layout_constraintBottom_toBottomOf="@id/back_button"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:textSize="@dimen/_16sdp"
-        android:textColor="@color/bolder_text"
-        android:textStyle="bold"/>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/free_seat_description_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_choose_seats"
-        android:layout_marginTop="@dimen/_30sdp">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="@dimen/_16sdp"
-            android:layout_height="@dimen/_16sdp"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_1sdp"
-            android:src="@drawable/ic_free"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/free"
-            android:layout_gravity="center"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/black"/>
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="@dimen/_16sdp"
-            android:layout_height="@dimen/_16sdp"
-            android:layout_gravity="center"
-            android:layout_marginStart="16.25dp"
-            android:layout_marginTop="@dimen/_1sdp"
-            android:src="@drawable/ic_busy"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/busy"
-            android:layout_gravity="center"
-            android:textSize="@dimen/_10sdp"
-            android:textColor="@color/black"/>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <View
-        android:id="@+id/bus_plan_layout"
-        android:layout_width="@dimen/_220sdp"
-        android:layout_height="@dimen/_315sdp"
-        android:background="@drawable/ic_main_frame"
-        android:layout_marginTop="@dimen/_14sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/free_seat_description_layout"/>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/wheel_img"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:src="@drawable/wheel"
-        app:layout_constraintStart_toStartOf="@id/bus_plan_layout"
-        app:layout_constraintTop_toTopOf="@id/bus_plan_layout"
-        android:layout_marginTop="@dimen/_17sdp"
-        android:layout_marginStart="@dimen/_25sdp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_bus_plan"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:layout_marginEnd="@dimen/_25sdp"
-        android:layout_marginBottom="@dimen/_22sdp"
-        app:layout_constraintBottom_toBottomOf="@id/bus_plan_layout"
-        app:layout_constraintEnd_toEndOf="@id/bus_plan_layout"
-        app:layout_constraintStart_toStartOf="@+id/wheel_img"
-        app:layout_constraintTop_toBottomOf="@id/wheel_img"
-        tools:listitem="@layout/item_seat" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/bottom_sheet"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp"
-        android:scaleType="fitXY"
-        android:src="@drawable/bottom_sheet_dialog_frame"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_selected_seats_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/selected_seats"
-        android:layout_marginTop="@dimen/_16sdp"
-        android:layout_marginStart="@dimen/_2sdp"
-        app:layout_constraintStart_toStartOf="@id/bottom_sheet"
-        app:layout_constraintTop_toTopOf="@id/bottom_sheet"/>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/back_button"
+            android:layout_width="@dimen/_29sdp"
+            android:layout_height="@dimen/_29sdp"
+            android:src="@drawable/ic_button_back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginStart="@dimen/_19sdp"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/selected_seats"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_2sdp"
-        android:layout_marginEnd="@dimen/_2sdp"
-        android:gravity="end"
-        android:textColor="@color/bolder_text"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_selected_seats_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/text_selected_seats_title"
-        app:layout_constraintTop_toTopOf="@+id/text_selected_seats_title"
-        tools:text="15/16/19" />
+        <TextView
+            android:id="@+id/title_choose_seats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_choose_seats"
+            app:layout_constraintStart_toEndOf="@id/back_button"
+            app:layout_constraintTop_toTopOf="@id/back_button"
+            app:layout_constraintBottom_toBottomOf="@id/back_button"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/bolder_text"
+            android:textStyle="bold"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/free_seat_description_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_choose_seats"
+            android:layout_marginTop="@dimen/_30sdp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_1sdp"
+                android:src="@drawable/ic_free"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/free"
+                android:layout_gravity="center"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/black"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:layout_gravity="center"
+                android:layout_marginStart="16.25dp"
+                android:layout_marginTop="@dimen/_1sdp"
+                android:src="@drawable/ic_busy"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/busy"
+                android:layout_gravity="center"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/black"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <View
+            android:id="@+id/bus_plan_layout"
+            android:layout_width="@dimen/_220sdp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:background="@drawable/ic_main_frame"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_sheet"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/free_seat_description_layout" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/wheel_img"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/wheel"
+            app:layout_constraintStart_toStartOf="@id/bus_plan_layout"
+            app:layout_constraintTop_toTopOf="@id/bus_plan_layout"
+            android:layout_marginTop="@dimen/_17sdp"
+            android:layout_marginStart="@dimen/_25sdp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_bus_plan"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/_20sdp"
+            android:nestedScrollingEnabled="false"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_25sdp"
+            app:layout_constraintBottom_toBottomOf="@id/bus_plan_layout"
+            app:layout_constraintEnd_toEndOf="@id/bus_plan_layout"
+            app:layout_constraintStart_toStartOf="@+id/wheel_img"
+            app:layout_constraintTop_toBottomOf="@id/wheel_img"
+            tools:listitem="@layout/item_seat" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_100sdp"
+            android:scaleType="fitXY"
+            android:src="@drawable/bottom_sheet_dialog_frame"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/text_selected_seats_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/selected_seats"
+            android:layout_marginTop="@dimen/_25sdp"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:textSize="@dimen/_12sdp"
+            app:layout_constraintStart_toStartOf="@id/bottom_sheet"
+            app:layout_constraintTop_toTopOf="@id/bottom_sheet"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/selected_seats"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_12sdp"
+            android:textSize="@dimen/_12sdp"
+            android:gravity="end"
+            android:textColor="@color/bolder_text"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/text_selected_seats_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/text_selected_seats_title"
+            app:layout_constraintTop_toTopOf="@+id/text_selected_seats_title"
+            tools:text="15/16/19" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/continue_button"
+            android:layout_width="@dimen/_270sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:background="@drawable/ic_button_layout"
+            android:text="@string/continue_button"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_selected_seats_title" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
