--- a/app/src/main/res/navigation/nav_user.xml
+++ b/app/src/main/res/navigation/nav_user.xml
@@ -31,7 +31,7 @@
         android:label="AboutAppFragment"
         tools:layout="@layout/fragment_about_app"/>
 
-    <fragment
+    <dialog
         android:id="@+id/changeLanguageFragment"
         android:name="kz.busjol.ui.change_language.ChangeLanguageFragment"
         android:label="ChangeLanguageFragment"
