--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,4 +49,8 @@
         <item name="android:background">@drawable/rounded_dialog</item>
     </style>
 
+    <style name="ActionBarTheme" parent="ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="android:background">@color/white</item>
+    </style>
+
 </resources>
